Updated Custom CKEditor options

--- a/ckeditor5/sample/index.html
+++ b/ckeditor5/sample/index.html
@@ -114,7 +114,10 @@
 						'bold',
 						'italic',
 						'underline',
-						'link',
+						'|',
+						'fontFamily',
+						'fontSize',
+						'|',
 						'horizontalLine',
 						'bulletedList',
 						'numberedList',
@@ -123,14 +126,17 @@
 						'indent',
 						'alignment',
 						'|',
+						'link',
 						'blockQuote',
 						'insertTable',
 						'htmlEmbed',
 						'imageInsert',
 						'imageUpload',
 						'mediaEmbed',
+						'|',
 						'undo',
 						'redo',
+						'|',
 						'sourceEditing'
 					]
 				},
@@ -167,7 +173,7 @@
 				.catch( error => {
 					console.error( 'Oops, something went wrong!' );
 					console.error( 'Please, report the following error on https://github.com/ckeditor/ckeditor5/issues with the build id and the error stack trace:' );
-					console.warn( 'Build id: kcrmulo0dbve-lfujdnsb5l58' );
+					console.warn( 'Build id: gi2mx2ovcm1w-4ms5ilpiw1ct' );
 					console.error( error );
 				} );
 		</script>
