--- a/ckeditor5/sample/index.html
+++ b/ckeditor5/sample/index.html
@@ -114,30 +114,24 @@
 						'bold',
 						'italic',
 						'underline',
-						'|',
-						'fontFamily',
 						'fontSize',
-						'|',
+						'fontFamily',
 						'horizontalLine',
 						'bulletedList',
 						'numberedList',
 						'|',
+						'alignment',
 						'outdent',
 						'indent',
-						'alignment',
 						'|',
 						'link',
+						'imageUpload',
+						'imageInsert',
 						'blockQuote',
 						'insertTable',
-						'htmlEmbed',
-						'imageInsert',
-						'imageUpload',
 						'mediaEmbed',
-						'|',
 						'undo',
-						'redo',
-						'|',
-						'sourceEditing'
+						'redo'
 					]
 				},
 				language: 'en',
@@ -146,8 +140,7 @@
 						'imageTextAlternative',
 						'imageStyle:inline',
 						'imageStyle:block',
-						'imageStyle:side',
-						'linkImage'
+						'imageStyle:side'
 					]
 				},
 				table: {
@@ -173,7 +166,7 @@
 				.catch( error => {
 					console.error( 'Oops, something went wrong!' );
 					console.error( 'Please, report the following error on https://github.com/ckeditor/ckeditor5/issues with the build id and the error stack trace:' );
-					console.warn( 'Build id: gi2mx2ovcm1w-4ms5ilpiw1ct' );
+					console.warn( 'Build id: dfc4fvg0b0e9-8plrabxggn18' );
 					console.error( error );
 				} );
 		</script>
